# LC_herbarium_database

./: .gitignore  README.md
backend/: alembic.ini  convert_2023_csv_data.py  docker-compose.yml  docker_notes.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cca42bc3fd0_basic_database_setup.py  7f18b6b78ba1_create_collectionevents_table.py  bce0fecab8a9_create_specimen_table.py
backend/herbarium_api/: crud.py  database.py  main.py  models.py  schemas.py
frontend/: package-lock.json
frontend/app/models/: control_menu.tsx
frontend/app/routes/: _index.tsx
frontend/app/styles/: index.css
