[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Daniel <rowedanielp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
alembic = "^1.12.0"
sqlalchemy = "^2.0.22"
pymysql = "^1.1.0"
pydantic = "^2.4.2"
cryptography = "^41.0.5"
orjson = "^3.9.10"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
